Fix expand and collaps in Divider component by moving functon to button

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -10,3 +10,7 @@ ion-card-subtitle {
 ion-card-title {
   font-size: 1rem;
 }
+
+.transition {
+  transition: all 1.3s ease;
+}
